--- a/src/styles/components/header/header.scss
+++ b/src/styles/components/header/header.scss
@@ -113,6 +113,7 @@
             align-items: center;
             flex-wrap: wrap;
             gap: 4px;
+            cursor: pointer;
 
             .nav-btn .host {
                 width: 100px;
