--- a/src/styles/basics/_helpers.scss
+++ b/src/styles/basics/_helpers.scss
@@ -80,7 +80,9 @@ justify-items: center;
     padding-top: 5%;
     box-shadow: inset 0 -0.5px 0 0 var(--font-lightgray-color);
 }
-
+.space{
+    margin-bottom: 15px;
+}
 .hide {
     display: none;
 }
