--- a/src/styles/components/stay-page/reviews-list.scss
+++ b/src/styles/components/stay-page/reviews-list.scss
@@ -14,5 +14,23 @@
             color: var(--font-gray-color);
             
         }
+
+        .review-preview-header {
+
+            .review-heading{
+
+                display: flex;
+                justify-content: space-between;
+                .review-user-img {
+                    margin-top: 10px;
+                    width: 45px;
+                    height: 45px;
+                    border-radius: 50%;
+                }
+            }
+        }
+
+        
     }
 }
+
