--- a/src/styles/components/stay-page/stay-page.scss
+++ b/src/styles/components/stay-page/stay-page.scss
@@ -6,7 +6,7 @@
     .stay-info-container {
         // justify-content: center;
         align-items: center;
-        width: 400px;
+        min-width: 400px;
         justify-content: space-between;
     }
 
