--- a/src/styles/components/stay-page/stay-page.scss
+++ b/src/styles/components/stay-page/stay-page.scss
@@ -7,7 +7,8 @@
         // justify-content: center;
         align-items: center;
         min-width: 400px;
-        justify-content: space-between;
+        justify-content: flex-start;
+        gap:5px;
     }
 
     .info-user-btns{
