--- a/src/styles/components/stay-page/reviews-list.scss
+++ b/src/styles/components/stay-page/reviews-list.scss
@@ -12,7 +12,12 @@
 
         h5 {
             color: var(--font-gray-color);
+            margin: 0 0 10px 0;
             
+        }
+
+        p{
+            margin: 0 0 10px 0;
         }
 
         .review-preview-header {
