--- a/src/styles/components/header/header.scss
+++ b/src/styles/components/header/header.scss
@@ -145,83 +145,83 @@
 
         }
 
-        .searchbar-fullHeaderOn {
-            align-self: center;
-            background-color: var(--card-background-color);
-            border-radius: 35px;
-            width: 575px;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            border: 1px solid var(--font-lightgray-color);
-            box-shadow: 0px 2px 5px var(--font-gray-color);
-            position: sticky;
-            top: 50px;
-            transition: 0.6s;
+        // .searchbar-fullHeaderOn {
+        //     align-self: center;
+        //     background-color: var(--card-background-color);
+        //     border-radius: 35px;
+        //     width: 575px;
+        //     display: flex;
+        //     flex-direction: column;
+        //     justify-content: space-between;
+        //     border: 1px solid var(--font-lightgray-color);
+        //     box-shadow: 0px 2px 5px var(--font-gray-color);
+        //     position: sticky;
+        //     top: 50px;
+        //     transition: 0.6s;
 
-            &:hover {
-                box-shadow: 0px 4px 12px var(--font-lightgray-color);
-                transition: 0.4s;
-            }
+        //     &:hover {
+        //         box-shadow: 0px 4px 12px var(--font-lightgray-color);
+        //         transition: 0.4s;
+        //     }
 
-            .searchbar-form {
-                align-self: center;
-                display: flex;
-                max-width: 750px;
-                margin-left: 5px;
-                gap: 5px;
+        //     .searchbar-form {
+        //         align-self: center;
+        //         display: flex;
+        //         max-width: 750px;
+        //         margin-left: 5px;
+        //         gap: 5px;
 
-                .srchbtn {
-                    img {
-                        margin-right: 10px;
-                        cursor: pointer;
-                        padding-top: 2px;
-                        align-self: center;
-                        height: 47px;
-                    }
+        //         .srchbtn {
+        //             img {
+        //                 margin-right: 10px;
+        //                 cursor: pointer;
+        //                 padding-top: 2px;
+        //                 align-self: center;
+        //                 height: 47px;
+        //             }
 
-                    &:hover {
-                        transform: scale(1.1, 1.1);
-                        transition: 0.3s;
-                    }
-                }
+        //             &:hover {
+        //                 transform: scale(1.1, 1.1);
+        //                 transition: 0.3s;
+        //             }
+        //         }
 
-                .searchber-form-label {
-                    display: flex;
-                    height: 50px;
-                    flex-direction: column;
-                    justify-content: center;
-                    align-self: center;
-                    width: 125px;
-                    text-align: center;
-                    border-radius: 35px;
-                    background-color: var(--card-background-color);
-                    transition: 0.3s;
+        //         .searchber-form-label {
+        //             display: flex;
+        //             height: 50px;
+        //             flex-direction: column;
+        //             justify-content: center;
+        //             align-self: center;
+        //             width: 125px;
+        //             text-align: center;
+        //             border-radius: 35px;
+        //             background-color: var(--card-background-color);
+        //             transition: 0.3s;
 
 
-                    .react-datepicker-wrapper .react-datepicker__input-container {
-                        align-self: center;
-                        width: auto;
-                    }
+        //             .react-datepicker-wrapper .react-datepicker__input-container {
+        //                 align-self: center;
+        //                 width: auto;
+        //             }
 
-                    input {
-                        text-align: center;
-                        max-width: 100px;
-                        align-self: center;
-                        border: 0px;
-                        background-color: var(--card-background-color);
-                        border-radius: 35px;
-                    }
+        //             input {
+        //                 text-align: center;
+        //                 max-width: 100px;
+        //                 align-self: center;
+        //                 border: 0px;
+        //                 background-color: var(--card-background-color);
+        //                 border-radius: 35px;
+        //             }
 
-                    &:hover {
-                        transform: scale(1.1, 1.1);
-                        background-color: var(--font-lightgray-color);
+        //             &:hover {
+        //                 transform: scale(1.1, 1.1);
+        //                 background-color: var(--font-lightgray-color);
 
-                        transition: 0.3s;
-                    }
-                }
-            }
-        }
+        //                 transition: 0.3s;
+        //             }
+        //         }
+        //     }
+        // }
     }
 
     .user-navbar {
@@ -299,4 +299,81 @@
 input,
 label {
     display: block;
+}
+.searchbar-fullHeaderOn {
+    align-self: center;
+    background-color: var(--card-background-color);
+    border-radius: 35px;
+    width: 575px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    border: 1px solid var(--font-lightgray-color);
+    box-shadow: 0px 2px 5px var(--font-gray-color);
+    position: sticky;
+    top: 50px;
+    transition: 0.6s;
+
+    &:hover {
+        box-shadow: 0px 4px 12px var(--font-lightgray-color);
+        transition: 0.4s;
+    }
+
+    .searchbar-form {
+        align-self: center;
+        display: flex;
+        max-width: 750px;
+        margin-left: 5px;
+        gap: 5px;
+
+        .srchbtn {
+            img {
+                margin-right: 10px;
+                cursor: pointer;
+                padding-top: 2px;
+                align-self: center;
+                height: 47px;
+            }
+
+            &:hover {
+                transform: scale(1.1, 1.1);
+                transition: 0.3s;
+            }
+        }
+
+        .searchber-form-label {
+            display: flex;
+            height: 50px;
+            flex-direction: column;
+            justify-content: center;
+            align-self: center;
+            width: 125px;
+            text-align: center;
+            border-radius: 35px;
+            background-color: var(--card-background-color);
+            transition: 0.3s;
+
+
+            .react-datepicker-wrapper .react-datepicker__input-container {
+                align-self: center;
+                width: auto;
+            }
+
+            input {
+                text-align: center;
+                max-width: 100px;
+                align-self: center;
+                border: 0px;
+                background-color: var(--card-background-color);
+                border-radius: 35px;
+            }
+
+            &:hover {
+                transform: scale(1.1, 1.1);
+                background-color: var(--font-lightgray-color);
+
+                transition: 0.3s;
+            }
+        }
+    }
 }
