login require on become a host

--- a/src/styles/components/explore/stay-preview.scss
+++ b/src/styles/components/explore/stay-preview.scss
@@ -133,6 +133,10 @@
         cursor: pointer;
 
     }
+    
+    .heart-empty {
+        color: rgba(0, 0, 0, 0);
+    }
 }
 
 .img-container:hover .next-btn {
