--- a/src/styles/basics/_base.scss
+++ b/src/styles/basics/_base.scss
@@ -15,16 +15,17 @@ html {
             padding: 0;
             height: 100%;
             width: 100%;
-            display: grid;
-            grid-template-columns: 1fr 6fr 1fr;
-
-
+            // display: grid;
+            // grid-template-columns: 1fr 6fr 1fr;
+            
+            
+            
             .app {
                 height: 100%;
-                grid-column: 2/-2;
-                display: grid;
-
+                // grid-column: 2/-2;
+                display: grid;             
                 grid-template-rows: 150px 1fr 150px;
+                grid-template-columns: 1fr 6fr 1fr;
                 color: var(--font-dark-color);
 
                 >* .full {
@@ -35,7 +36,7 @@ html {
 
             main {
                 grid-row: 2/-2;
-                grid-column: 1/-1;
+                grid-column: 2/-2;
             }
         }
     }
