--- a/src/styles/components/home-page/home-page.scss
+++ b/src/styles/components/home-page/home-page.scss
@@ -70,7 +70,7 @@
                 border-radius: 20px;
                 height: 350px;
                 width: 300px;
-                margin-left: 15px;
+                // margin-left: 15px;
                 background-color: var(--card-background-color);
 
                 &:hover {
