--- a/src/styles/components/home-page/home-page.scss
+++ b/src/styles/components/home-page/home-page.scss
@@ -70,11 +70,11 @@
                 border-radius: 20px;
                 height: 350px;
                 width: 300px;
-                // margin-left: 15px;
+                gap: 15px;
                 background-color: var(--card-background-color);
 
                 &:hover {
-                    transform: scale(1.1, 1.1);
+                    transform: scale(1.05, 1.05);
                     transition: 0.3s;
                 }
             }
