--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -34,7 +34,7 @@
 @import 'components/stay-page/stay-details.scss';
 @import 'components/stay-page/stay-order.scss';
 @import 'components/stay-page/stay-map.scss';
-
+@import 'components/stay-page/amenities-modal.scss';
 
 // host
 @import 'components/host.scss';
