--- a/src/styles/components/user-back-office/user-back-office.scss
+++ b/src/styles/components/user-back-office/user-back-office.scss
@@ -1,3 +1,75 @@
 .user-back-office{
-    background-color: grey;
+    
+}
+
+.new-stay {
+
+    .new-stay-form {
+
+
+        .new-stay-form-inputs {
+
+
+            display: flex;
+
+            gap: 2%;
+        }
+
+        .property-inputs {
+            margin-top: 25px;
+            display: flex;
+            justify-content: space-between;
+
+            gap: 2%;
+
+        }
+
+        
+    }
+}
+
+.img-upload-grid{
+
+    margin-top: 25px;
+    height: 410px;
+    display: grid;
+    grid-gap: 10px 10px;
+    grid-template-columns: 2fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    border-radius: 15px;
+    overflow: hidden;
+
+    .img-blank:first-child {
+
+        background-color: var(--font-lightgray-color);
+        grid-column: 1/2;
+        grid-row: 1/-1;
+        max-height: 410px;
+        &:hover {
+            background-color: var(--font-gray-color);
+        }
+        
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+
+        }
+
+    }
+
+    .img-blank {
+
+        background-color: var(--font-lightgray-color);
+        max-height: 200px;
+        &:hover {
+            background-color: var(--font-gray-color);
+        }
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
 }
