--- a/src/styles/setup/variables.scss
+++ b/src/styles/setup/variables.scss
@@ -4,6 +4,7 @@
     --btn-background-color:rgb(240, 240,240);
     --font-lightgray-color:rgb(200,200,200);
     --font-gray-color:rgb(113,113,113);
+    --font-gray-see-throw-color:rgba(47,47,47,0.7);
     --font-dark-color:rgb(47,47,47);
     --logo-color:rgb(255, 90, 95);
 }
