--- a/src/styles/components/header/signin.scss
+++ b/src/styles/components/header/signin.scss
@@ -50,7 +50,7 @@
     z-index: -100;
     min-height: 100%;
     min-width: 100%;
-    background-color: var(--font-dark-color);
+    background-color: var(--font-gray-see-throw-color);
     opacity: 0;
     transition:opacity .8s;
 
