--- a/src/styles/components/footer/footer.scss
+++ b/src/styles/components/footer/footer.scss
@@ -1,13 +1,19 @@
 .AppFooter {
     grid-column: 1/-1;
-    position:relative;
-    display: block;
+    position:fixed;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     left: 0px;
     bottom: 0px;
     width: 100%;
-    height: 100px;
-    margin-top: 150px;
+    height: 75px;
+    background-color: var(--main-background-color);
+>*{
+    align-self: center;
+}
     h4{
+        
         margin: 0;
         padding: 0;
     }
