--- a/src/styles/components/explore/stay-preview.scss
+++ b/src/styles/components/explore/stay-preview.scss
@@ -5,11 +5,13 @@
 
     .stay-list {
         align-items: center;
-        display: flex;
+        display: grid;
         width: 100%;
+        grid-template-columns: repeat(5, 1fr);
+        gap: 10px;
+        grid-auto-rows: minmax(100px, auto);
+        gap: 10px;
         justify-content: space-between;
-        gap: 6px;
-        flex-wrap: wrap;
 
         .stay-preview {
             height: 370px;
@@ -85,7 +87,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    color:var(--font-dark-color);
+    color: var(--font-dark-color);
     margin-right: 10px;
     cursor: pointer;
 }
@@ -133,7 +135,7 @@
         cursor: pointer;
 
     }
-    
+
     .heart-empty {
         color: rgba(0, 0, 0, 0);
     }
