--- a/src/styles/basics/_helpers.scss
+++ b/src/styles/basics/_helpers.scss
@@ -23,6 +23,21 @@
 .dark {
     color: var(--font-dark-color)  !important;
 }
+
+// h1,
+// h2,
+// h3,
+// h4,
+// h6{
+//     font-family: circular-light;
+// }
+// div{
+//     font-family:circular;
+// }
+// p,
+// span{
+//     font-family:circular;
+// }
 .date{
     width: 75px;
     margin-left: 10px;
