--- a/src/styles/setup/typography.scss
+++ b/src/styles/setup/typography.scss
@@ -1,12 +1,12 @@
 
 @font-face {
-    font-family: circular-light;
+    font-family: circular;
     src: url(../../assets/fonts/Circular.ttf) format("woff2");
     font-weight: 300;
     font-style: normal;
 }
 @font-face {
-    font-family: circular-light;
+    font-family: cereal-Light;
     src: url(../../assets/fonts/airbnb-new/AirbnbCerealLight.woff) format("woff2");
     font-weight: 300;
     font-style: normal;
@@ -32,6 +32,6 @@
     src: url(../../assets/fonts/airbnb-new/AirbnbCerealExtraBold.woff) format("woff2");
 }
 @font-face {
-    font-family: circular;
+    font-family: circular-light;
     src: url(../../assets/fonts/airbnb-new/AirbnbCerealLight.woff) format("woff2");
 }
