--- a/src/styles/components/explore/explore-filter.scss
+++ b/src/styles/components/explore/explore-filter.scss
@@ -1,21 +1,27 @@
 .explore-filter {
     width: 100%;
-    height: 150px;
+    height: 75px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin: 0;
+    margin-bottom: 20px;
+
+    >* {
+        align-self: flex-end;
+    }
 
     h3 {
-        align-self: center;
+        margin: 0;
+        padding-bottom: 15px;
     }
 
     .filter-btns {
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
-        align-self: center;
+        // align-self: flex-end;
         font-size: 14px;
+        cursor: pointer;
 
         .filter-label-btn {
             display: flex;
@@ -28,6 +34,7 @@
             background-color: var(--btn-background-color);
             border: 1px solid var(--font-gray-color);
             box-shadow: 0 0 2px var(--font-lightgray-color);
+            cursor: pointer;
 
             span {
                 align-self: center;
@@ -63,13 +70,28 @@
     }
 
     .slider-container {
-        width: 350px;
-        padding-left: 10px;
-
-        align-self: center;
-
+        height: 75px;
+        width: 230px;
+        justify-content: center;
+        align-items: center;
+        position: fixed;
+        top: 230px;
+        left: 200px;
+        z-index: 150;
+        // padding-left: 15px;
+        border-radius: 10px;
+        color: var(--font-dark-color);
+        background-color: var(--main-background-color);
+        border: 1px solid var(--font-gray-color);
+        display: flex;
+        flex-direction: column;
         .css-187mznn-MuiSlider-root {
-            color: var(--logo-color);
+
+            display: flex;
+            align-self: center;
+            justify-content: center;
+            width: 200px;
+            color: var(--font-lightgray-color);
         }
     }
 }
