--- a/src/styles/components/header/header.scss
+++ b/src/styles/components/header/header.scss
@@ -11,7 +11,7 @@
 
     .header {
         display: grid;
-        grid-template-columns: 1fr 6fr 1fr;
+        grid-template-columns: 1fr 7fr 1fr;
         width: 100%;
         height: 100%;
         transition: 0.3s;
@@ -226,27 +226,25 @@
 
             .login-slide-modal {
                 color: var(--font-dark-color);
-
                 width: 120px;
                 background-color: var(--main-background-color);
-                height: 0;
                 border: 1px solid var(--font-lightgray-color);
-                border-radius: 20px 20px 20px 20px;
-                // padding: 4px 6px 4px 6px;
+                border-radius: 10px;
                 display: none;
                 position: fixed;
                 top: 95px;
-                right: 175px;
+                right: 200px;
                 justify-content: center;
                 align-items: center;
 
                 :first-child {
-                    border-radius: 20px 0 0 0;
-                    padding-top: 8px;
+                    // border-radius: 20px 0 0 0;
+                    margin-top: 20px;
                 }
 
                 :last-child {
-                    border-radius: 0 0 20px 20px;
+                    margin-bottom: 20px;
+                    // border-radius: 0 0 20px 20px;
                 }
 
                 .login-opt-btn {
@@ -258,8 +256,8 @@
                     justify-content: center;
 
                     &:hover {
-                        background-color: var(--font-lightgray-color);
-                        // color: rgb(245, 245, 245);
+                        background-color: var(--btn-background-color);
+
                     }
                 }
 
@@ -273,7 +271,7 @@
                     gap: 5px;
                     flex-direction: column;
                     justify-content: space-evenly;
-                    height: 110px;
+                    height: 100px;
                     transition: 0.4s;
                 }
             }
