--- a/src/styles/components/home-page/home-page.scss
+++ b/src/styles/components/home-page/home-page.scss
@@ -4,6 +4,12 @@
     grid-column: 1/-1;
 
     .hero-container {
+        width: 100%;
+        position: absolute;
+        top: 0;
+        left: 0%;
+        width: 100%;
+        max-height: 750px;
 
         .centered {
             font-size: 4rem;
@@ -15,12 +21,10 @@
         }
 
         .hero-img {
-            position: absolute;
-            top: 0;
-            left: 0%;
-            max-height: 950px;
             width: 100%;
+            max-height: 750px;
             object-fit: cover;
+            overflow: hidden;
             z-index: -1;
         }
 
@@ -50,7 +54,8 @@
 
     .destinations-container {
         position: relative;
-        top: 800px;
+        display: block;
+        margin-top: 700px;
         height: 60vh;
         grid-column: 2;
         grid-row: 2;
@@ -68,24 +73,33 @@
             .city-card {
                 justify-content: space-evenly;
                 border-radius: 20px;
-                height: 350px;
+
                 width: 300px;
                 gap: 15px;
                 background-color: var(--card-background-color);
+                overflow: hidden;
+
+
+            }
+        }
+
+        .img-container {
+            aspect-ratio: 1/1;
+            overflow: hidden;
+            border-radius: 20px;
+            object-fit: contain;
+
+            img {
+                aspect-ratio: 1/1;
+                width: 100%;
+
 
                 &:hover {
                     transform: scale(1.05, 1.05);
                     transition: 0.3s;
                 }
-            }
 
-            img {
-                border-radius: 20px;
-                aspect-ratio: 1/1;
-                max-width: 300px;
-                max-height: 350px;
             }
-
         }
     }
 }
