add stay almost complete

--- a/src/styles/components/header/header.scss
+++ b/src/styles/components/header/header.scss
@@ -214,6 +214,8 @@
         }
 
         .user-navbar {
+            background-color: #fff;
+            color:var(--font-dark-color);
             cursor: pointer;
             border: 1px solid var(--font-dark-color);
             border-radius: 20px;
