--- a/src/styles/components/explore/explore-filter.scss
+++ b/src/styles/components/explore/explore-filter.scss
@@ -71,10 +71,10 @@
 
     .slider-container {
         height: 75px;
-        width: 230px;
+        width: 220px;
         justify-content: center;
         align-items: center;
-        position: fixed;
+        position: absolute;
         top: 230px;
         left: 200px;
         z-index: 150;
