--- a/src/styles/components/user-back-office/user-back-office.scss
+++ b/src/styles/components/user-back-office/user-back-office.scss
@@ -103,3 +103,15 @@
     display: flex;
     justify-content: center;
 }
+
+.upload-img-txt {
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    label {
+        font-size: 2rem;
+        font-family: circular-book;
+        text-align: center;
+    }
+}
