--- a/src/styles/components/stay-page/stay-scores.scss
+++ b/src/styles/components/stay-page/stay-scores.scss
@@ -24,7 +24,7 @@
     }
 
     .line-loader-container{
-        background-color: var(--main-background-color);
+        background-color: var(--scores-background-color);
         width: 115px;
         height: 5px;
         margin-inline-end: 15px;
