--- a/src/styles/components/stay-page/stay-order.scss
+++ b/src/styles/components/stay-page/stay-order.scss
@@ -1,6 +1,9 @@
 .stay-details-order {
 
-    .order-now {
+
+    .stay-order {
+        flex-direction: column;
+        justify-content: center;
         width: 300px;
         background-color: var(--main-background-color);
         border: 1px solid var( --font-dark-color);
@@ -9,6 +12,14 @@
         position: sticky;
         top: 200px;
 
+        .order-form-header{
+            align-items: center;
+
+            p{
+                align-items: center;
+                text-align: center;
+            }
+        }  
 
         .calander {
             margin: 10px;
@@ -26,7 +37,6 @@
             font-size: 20px;
 
         }
-
 
         .set-guests {
             display: flex;
