--- a/src/styles/setup/variables.scss
+++ b/src/styles/setup/variables.scss
@@ -2,6 +2,7 @@
     --main-background-color:rgb(250, 250, 250);
     --card-background-color:rgb(248, 248, 248);
     --btn-background-color:rgb(240, 240,240);
+    --scores-background-color:rgb(221, 221,221);
     --font-lightgray-color:rgb(200,200,200);
     --font-gray-color:rgb(113,113,113);
     --font-gray-see-throw-color:rgba(47,47,47,0.7);
