--- a/src/styles/components/explore/stay-preview.scss
+++ b/src/styles/components/explore/stay-preview.scss
@@ -108,19 +108,20 @@
     cursor: pointer;
 }
 
-.img-preview {
-    width: 100%;
-    aspect-ratio: 1/1;
-    margin-top: 0;
-    border-radius: 20px;
-}
 
 .img-container {
     padding: 0;
     margin: 0;
     height: 270px;
+    width: 270px;
+    aspect-ratio: 1/1;
     
-
+    .img-preview {
+        width: 100%;
+        aspect-ratio: 1/1;
+        margin-top: 0;
+        border-radius: 20px;
+    }
     .heart-btn {
         // z-index: 10;
         width: 30px;
@@ -128,7 +129,7 @@
         display: inline-block;
         position: relative;
         top: -260px;
-        right:-40%;
+        right: -40%;
         align-items: center;
         font-size: 25px;
         border-radius: 50%;
