--- a/src/styles/components/user-back-office/user-back-office.scss
+++ b/src/styles/components/user-back-office/user-back-office.scss
@@ -115,3 +115,37 @@
         text-align: center;
     }
 }
+
+.order-list { 
+
+    width: 96%;
+    display: grid;
+    justify-content: center;
+    grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
+
+    .order-preview {
+
+        display: flex;
+        flex-direction: column;
+        padding:15px;
+        margin: 10px;
+        background-color: var(--main-background-color);
+        border:  1px solid var(--font-gray-color);
+        border-radius: 20px;
+
+
+        .order-preview-buyer-img {
+            display: flex;
+            justify-content: space-between;
+
+            .review-user-img {
+
+                margin-top: 10px;
+                width: 45px;
+                height: 45px;
+                border-radius: 50%;
+            }
+           
+        }
+    }
+}
