--- a/src/styles/components/header/header.scss
+++ b/src/styles/components/header/header.scss
@@ -3,11 +3,12 @@
     align-items: center;
     justify-content: space-between;
     height: 150px;
-    position: sticky;
     top: 0;
     grid-row: 1/2;
     grid-column: 1/-1;
     z-index: 200;
+    position: sticky;
+
 
     .header {
         display: grid;
@@ -15,6 +16,7 @@
         width: 100%;
         height: 100%;
         transition: 0.3s;
+
 
         .header-container {
             grid-column: 2/-2;
@@ -141,6 +143,7 @@
                 padding-left: 15px;
                 margin: 0;
                 padding-bottom: 0;
+                transition: 0.6s;
 
                 >* {
                     align-self: center;
@@ -313,6 +316,7 @@
             cursor: pointer;
         }
     }
+
 }
 
 .full-header {
