--- a/src/styles/components/explore/stay-preview.scss
+++ b/src/styles/components/explore/stay-preview.scss
@@ -47,6 +47,8 @@
 
 .locatoing-rating {
     height: 35px;
+    width: 270px;
+    padding-top: 5px;
     display: flex;
     justify-content: space-between;
     color: var(--font-dark-color);
@@ -113,13 +115,14 @@
     height: 270px;
     width: 270px;
     aspect-ratio: 1/1;
-    
+
     .img-preview {
         width: 100%;
         aspect-ratio: 1/1;
         margin-top: 0;
         border-radius: 20px;
     }
+
     .heart-btn {
         // z-index: 10;
         width: 30px;
