--- a/src/styles/components/user-back-office/user-back-office.scss
+++ b/src/styles/components/user-back-office/user-back-office.scss
@@ -150,7 +150,18 @@
     }
 }
 
-.list-container {
+.backoffice-list-container {
 
     max-width: 75% ;
+    
+    .backoffice-stay-list {
+
+        align-items: center;
+        display: grid;
+        width: 100%;
+        grid-template-columns: repeat(5, 1fr);
+        grid-auto-rows: minmax(100px, auto);
+        gap: 15px;
+        justify-content: space-between;
+    }
 }
