--- a/src/styles/basics/_base.scss
+++ b/src/styles/basics/_base.scss
@@ -21,7 +21,7 @@ html {
 
 
             .app {
-                height: 100%;
+                height: fit-content;
                 display: grid;
                 grid-template-rows: 150px 1fr 150px;
                 grid-template-columns: 1fr 7fr 1fr;
