--- a/src/styles/components/explore/stay-preview.scss
+++ b/src/styles/components/explore/stay-preview.scss
@@ -9,11 +9,12 @@
         width: 100%;
         grid-template-columns: repeat(5, 1fr);
         grid-auto-rows: minmax(100px, auto);
+        padding: auto;
         gap: 15px;
-        justify-content: space-between;
 
         .stay-preview {
             // height: 370px;
+            // align-items: center;
             width: 100%;
             margin-bottom: 20px;
             line-height: 18px;
