--- a/src/styles/components/stay-page/reviews-modal.scss
+++ b/src/styles/components/stay-page/reviews-modal.scss
@@ -6,14 +6,14 @@
     right: 50%;
     transform: translate(50%, 50%);
 
-    border: 1px solid var(--font-lightgray-color);
+    border: 2px solid var(--font-lightgray-color);
     border-radius: 20px;
     background-color: var(--card-background-color);
     z-index: 100;
 
     .stay-reviews {
-        height: 750px;
-        overflow: auto;
+        height: 80%;
+        // overflow: hidden;
         border-radius: 20px;
         padding: 2%;
         display: grid;
@@ -24,7 +24,7 @@
         .stay-reviews-header {
             grid-column: 1/2;
             grid-row: 1/2;
-            position: sticky;
+            position: relative;
             top: 20px;
 
         }
@@ -35,6 +35,9 @@
             position: relative;
             top: 10px;
 
+            h2 {
+                display: block;
+            }
 
             .stay-scores {
                 display: flex;
@@ -43,10 +46,19 @@
             }
         }
 
+        .reviews-container {
+            overflow: auto;
+            height: 100%;
+            grid-row: 1/-1;
+        }
+
         .reviews-list-container {
+
             display: flex;
             flex-direction: column;
+            overflow: auto;
             padding: 5%;
+            padding-top: 0;
         }
 
         .review-preview-container {
@@ -71,8 +83,8 @@
 
         & span {
             cursor: pointer;
-            margin: 10px;
-            padding: 10px;
+            margin: 20px;
+            // padding: 10px;
         }
     }
 
