--- a/src/styles/components/explore/explore-filter.scss
+++ b/src/styles/components/explore/explore-filter.scss
@@ -17,7 +17,7 @@
 
     .filter-btns {
         display: flex;
-        flex-wrap: wrap;
+        // flex-wrap: wrap;
         justify-content: center;
         // align-self: flex-end;
         font-size: 14px;
@@ -26,18 +26,21 @@
         .filter-label-btn {
             display: flex;
             justify-content: center;
-            width: 85px;
+            width: fit-content;
+            min-width: 80px;
             height: 42px;
-            margin: 4px;
-            border-radius: 20px;
+            margin: 8px ;
+            // padding: 0 0.5%;
+            border-radius: 25px;
             color: var(--font-dark-color);
-            background-color: var(--btn-background-color);
+            // background-color: var(--btn-background-color);
             border: 1px solid var(--font-gray-color);
             box-shadow: 0 0 2px var(--font-lightgray-color);
             cursor: pointer;
 
             span {
                 align-self: center;
+                margin: 0 24px;
             }
         }
 
@@ -49,7 +52,7 @@
             display: flex;
             justify-content: center;
             color: var(--font-dark-color);
-            background-color: var(--btn-background-color);
+            // background-color: var(--btn-background-color);
             border: 1px solid var(--font-dark-color);
             box-shadow: 0 0 2px var(--font-dark-color);
 
@@ -74,7 +77,7 @@
         width: 220px;
         justify-content: center;
         align-items: center;
-        position: absolute;
+        position: a;
         top: 230px;
         left: 200px;
         z-index: 150;
