--- a/src/styles/components/home-page/home-page.scss
+++ b/src/styles/components/home-page/home-page.scss
@@ -14,10 +14,13 @@
         .centered {
             font-size: 4rem;
             position: absolute;
-            top: 50%;
+            top: 35%;
             left: 50%;
             transform: translate(-50%, -50%);
             color: var(--main-background-color);
+            
+            text-shadow: 1px 1px 0 rgba(53,53,53,0.1), 1px -1px 0 rgba(53,53,53,0.1), -1px 1px 0 rgba(53,53,53,0.1), -1px -1px 0 rgba(53,53,53,0.1), 1px 0px 0 rgba(53,53,53,0.1), 0px 1px 0 rgba(53,53,53,0.1), -1px 0px 0 rgba(53,53,53,0.1), 0px -1px 0 rgba(53,53,53,0.1);
+           
         }
 
         .hero-img {
@@ -32,19 +35,28 @@
             margin-top: 25px;
             position: absolute;
             text-align: center;
-            padding-top: 10px;
-            top: 75%;
+            font-size: 36px;
+            top: 60%;
             left: 50%;
             transform: translate(-50%, -50%);
             background-color: var(--main-background-color);
-            border-radius: 20px;
-            width: 200px;
-            height: 30px;
-            border: 2px solid var(var(--main-background-color));
+            border-radius: 50px;
+            width: 320px;
+            height: 70px;
+            border: 1px solid var(var(--main-background-color));
             cursor: pointer;
+            display: flex;
+            justify-content: center;
+
+            span {
+                align-self: center
+            }
+
+            ;
 
             &:hover {
-                border: 2px solid var(--font-dark-color);
+                border: 1px solid var(--font-dark-color);
+                box-shadow: 0 0 0 1px var(--scores-background-color);
                 transition: 0.3s;
             }
 
@@ -74,8 +86,8 @@
                 justify-content: space-evenly;
                 border-radius: 20px;
 
-                width: 300px;
-                gap: 15px;
+                width: 400px;
+                // gap: 15px;
                 background-color: var(--card-background-color);
                 overflow: hidden;
 
