--- a/src/styles/components/stay-page/amenities-modal.scss
+++ b/src/styles/components/stay-page/amenities-modal.scss
@@ -5,7 +5,7 @@
     top: 50%;
     right: 50%;
     transform: translate(50%, 50%);
-    
+
     border: 1px solid var(--font-lightgray-color);
     border-radius: 20px;
     background-color: var(--card-background-color);
@@ -47,42 +47,51 @@
             flex-direction: column;
             padding: 5%;
             padding-top: 0;
-        }
-
-        .review-preview-container {
-            width: 100%;
-
-            h5 {
-                color: var(--font-gray-color);
-            }
-
-            p {
-                padding-right: 10%;
-            }
-        }
-    }
-
-    .modal-header {
-        display: flex;
-        justify-content: flex-end;
-        padding-top: 15px;
-        padding-right: 15px;
-
-        span {
-            cursor: pointer;
-        }
-
-        .amenities-list-container {
             height: 90%;
             width: 95%;
             overflow: auto;
+
             .amenities-list {
                 padding-left: 15px;
                 padding-right: 15px;
             }
         }
     }
+
+    .review-preview-container {
+        width: 100%;
+
+        h5 {
+            color: var(--font-gray-color);
+        }
+
+        p {
+            padding-right: 10%;
+        }
+    }
 }
+
+.modal-header {
+    display: flex;
+    justify-content: flex-end;
+    padding-top: 15px;
+    padding-right: 15px;
+
+    span {
+        cursor: pointer;
+    }
+
+    // .amenities-list-container {
+    //     height: 90%;
+    //     width: 95%;
+
+    //     .amenities-list {
+    //         overflow: auto;
+    //         padding-left: 15px;
+    //         padding-right: 15px;
+    //     }
+}
+
 
 .amenities-screen {
     pointer-events: none;
