--- a/src/styles/components/stay-page/stay-gallery.scss
+++ b/src/styles/components/stay-page/stay-gallery.scss
@@ -1,5 +1,6 @@
 .stay-gallery {
     display: grid;
+    margin-top: 24px;
     grid-gap: 10px 10px;
     grid-template-columns: 2fr 1fr 1fr;
     grid-template-rows: 1fr 1fr;
