--- a/src/styles/components/header/header.scss
+++ b/src/styles/components/header/header.scss
@@ -253,23 +253,27 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            svg{
+
+            svg {
                 aspect-ratio: 0.7/1;
             }
 
 
             .login-slide-modal {
                 color: var(--font-dark-color);
+                height: fit-content;
                 width: 120px;
                 background-color: var(--main-background-color);
-                border: 1px solid var(--font-lightgray-color);
+                box-shadow: rgb(0 0 0 / 12%) 0px 6px 16px;
+                border: 1px solid rgb(221, 221, 221);
                 border-radius: 10px;
                 display: none;
                 position: fixed;
                 top: 95px;
                 right: 200px;
-                justify-content: center;
+                justify-content: start;
                 align-items: center;
+                padding: 10px 0;
 
                 :first-child {
                     // border-radius: 20px 0 0 0;
@@ -281,17 +285,20 @@
                     // border-radius: 0 0 20px 20px;
                 }
 
-                .login-opt-btn {
-                    margin: 0;
-                    gap: 5px;
-                    width: 100%;
-                    // border-radius: 20px 20px 20px 20px;
-                    display: flex;
-                    justify-content: center;
+                .menu-btn-container {
 
-                    &:hover {
-                        background-color: var(--btn-background-color);
+                    .login-opt-btn {
+                        // margin-top: 5px;
+                        // gap: 15px;
+                        width: 100%;
+                        // margin-left:14px;
+                        // border-radius: 20px 20px 20px 20px;
+                        display: flex;
+                        justify-content: flex-start;
 
+                        &:hover {
+                            background-color: var(--btn-background-color);
+                        }
                     }
                 }
 
