--- a/src/styles/basics/_base.scss
+++ b/src/styles/basics/_base.scss
@@ -23,13 +23,18 @@ html {
             .app {
                 height: fit-content;
                 display: grid;
-                grid-template-rows: 75px 1fr 75px;
+                grid-template-rows: 150px 1fr 75px;
                 grid-template-columns: 1fr 8fr 1fr;
                 color: var(--font-dark-color);
+                transition: 0.6s;
 
                 >* .full {
                     grid-row: 1/2;
 
+                }
+                & .full-header{
+                    grid-template-rows: 75px 1fr 75px;
+                    transition: 0.6s;
                 }
             }
 
