--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -35,6 +35,7 @@
 @import 'components/stay-page/stay-order.scss';
 @import 'components/stay-page/stay-map.scss';
 @import 'components/stay-page/amenities-modal.scss';
+@import 'components/stay-page/order-msg-modal.scss';
 
 // host
 @import 'components/host.scss';
